--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="myweb.css">
+    <link rel="" href="node_modules/myweb.css">
 </head>
 <body>
     <h1>hiiiii</h1>
