--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <link href="./css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        
+        <h1>hahahah</h1>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-utorange fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <!-- <span class="d-block d-lg-none">Clarence Taylor</span> -->
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="headshot.jpg" alt="" /></span>
+                <span class="d-block d-lg-none">Fangjiang Wu</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./headshot.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
