--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-utorange fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Fangjiang Wu</span>
-            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="headshot.jpg" alt="" /></span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded mx-auto mb-2"
+                    src="myHeadshot.jpg" alt="" /></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -67,29 +67,23 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Senior Web Developer</h3>
+                        <h3 class="mb-0">position title</h3>
                         <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
-                            the day, going forward, a new normal that has evolved from generation X is on the runway
-                            heading towards a streamlined cloud solution. User generated content in real-time will have
-                            multiple touchpoints for offshoring.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aut, dolorem nisi quos animi dolore reprehenderit. Quo exercitationem rerum pariatur molestias nihil iure, atque recusandae, voluptate repellendus est quae sunt?</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Developer</h3>
+                        <h3 class="mb-0">position title</h3>
                         <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.
-                            Override the digital divide with additional clickthroughs from DevOps. Nanotechnology
-                            immersion along the information highway will close the loop on focusing solely on the bottom
-                            line.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt consectetur iste repellendus fugit reprehenderit itaque molestiae maxime necessitatibus dolore consequuntur, id dolores aut voluptatem saepe minima libero quis facere dolor.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Junior Web Designer</h3>
+                        <h3 class="mb-0">position title</h3>
                         <div class="subheading mb-3">Shout! Media Productions</div>
                         <p>Podcasting operational change management inside of workflows to establish a framework. Taking
                             seamless key performance indicators offline to maximise the long tail. Keeping your eye on
@@ -100,11 +94,9 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Web Design Intern</h3>
+                        <h3 class="mb-0">position title</h3>
                         <div class="subheading mb-3">Shout! Media Productions</div>
-                        <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically
-                            procrastinate B2C users after installed base benefits. Dramatically visualize customer
-                            directed convergence without revolutionary ROI.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus similique accusantium, laudantium eum illum magnam obcaecati expedita sit modi minima. Expedita rerum aut sed repudiandae vitae at sunt veritatis maiores!</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                 </div>
@@ -117,20 +109,20 @@
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">University of Colorado Boulder</h3>
-                        <div class="subheading mb-3">Bachelor of Science</div>
-                        <div>Computer Science - Web Development Track</div>
-                        <p>GPA: 3.23</p>
+                        <h3 class="mb-0">placeholder</h3>
+                        <div class="subheading mb-3">placeholder</div>
+                        <div>placeholder</div>
+                        <p></p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">placeholder</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">James Buchanan High School</h3>
-                        <div class="subheading mb-3">Technology Magnet Program</div>
-                        <p>GPA: 3.56</p>
+                        <h3 class="mb-0">placeholder</h3>
+                        <div class="subheading mb-3">placeholder</div>
+                        <p>placeholder</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">placeholder</span></div>
                 </div>
             </div>
         </section>
@@ -180,12 +172,8 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid
-                    skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking,
-                    free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto reiciendis officiis dolor amet nostrum. Sequi aperiam alias beatae nihil! Fuga voluptatem autem cumque debitis amet saepe, magnam et corrupti provident.</p>
+            
             </div>
         </section>
         <hr class="m-0" />
