--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Fangjiang Wu</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -48,8 +48,8 @@
                     Fangjiang Wu
                 </h1>
                 <div class="subheading mb-5">
-                    address: phone number:
-                    <a href="nickwfj123@outlook.com">nickwfj123@outlook.com</a>
+                    address: placeholder phone number: placeholder 
+                    <a href="nickwfj123@outlook.com">email: nickwfj123@outlook.com</a>
                 </div>
                 <p class="lead mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat vitae neque
                     laboriosam voluptatem! Commodi accusamus voluptatum aut eligendi blanditiis consectetur mollitia
