--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>Fangjiang Wu</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -29,6 +27,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -44,13 +43,13 @@
         <!-- About-->
         <section class="resume-section" id="about">
             <div class="resume-section-content">
-                <h1 class="mb-0">
+                <h1 class="mb-0" style="color:#dd7a39">
                     Fangjiang Wu
                 </h1>
                 <div class="subheading mb-5">
                     <p class="mb-0"><a href="mailto: nickwfj123@outlook.com">nickwfj123@outlook.com</a></p>
-                    <p class="mb-0">(512) 496-9449</p>
-                    <p class="mb-0">7205 Hart Lane, Austin, TX 78731</p>
+                    <p class="mb-0" style="color:#343a40">(512) 496-9449</p>
+                    <p class="mb-0" style="color:#343a40">7205 Hart Lane, Austin, TX 78731</p>
 
                 </div>
                 <p class="lead mb-1">Hi, I'm Fangjiang Wu, a graduate student in University of Teaxs at Austin. My major
@@ -66,13 +65,12 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5">Education</h2>
+                <h2 class="mb-5" style="color:#dd7a39">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">University of Texas at Austin</h3>
                         <div class="subheading mb-3">Master of Science in Information Studies</div>
-                        <div>GPA: 3.7/4.0</div>
-                        <p></p>
+                        <p>GPA: 3.7/4.0</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Jan. 2019 – Dec. 2020</span></div>
                 </div>
@@ -90,7 +88,7 @@
         <!-- Projects -->
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
-                <h2 class="mb-5">Projects</h2>
+                <h2 class="mb-5" style="color:#dd7a39">Projects</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">MyCampground</h3>
@@ -137,10 +135,10 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Interests-->
+        <!-- Experience -->
         <section class="resume-section" id="experiences">
             <div class="resume-section-content">
-                <h2 class="mb-5">Experiences</h2>
+                <h2 class="mb-5" style="color:#dd7a39">Experiences</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">UT Division of Student Affairs</h3>
@@ -157,7 +155,8 @@
                     <div class="flex-shrink-0"><span class="text-primary">
                             <p class="mb-2 text-center">Austin, TX</p>
                             <p>Aug. 2020 – Nov. 2020</p>
-                        </span></div>
+                        </span>
+                    </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -173,21 +172,10 @@
                             <p class="mb-2 text-center">Guangzhou, China</p>
                             <p>Jul. 2017 – Sep. 2017
                             </p>
-                        </span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">National Parks</h3>
-                        <div class="subheading mb-3">Web Application</div>
-                        <ul>
-                            <li>Web Application for users to comment and search information of specific national
-                                park.</li>
-                            <li>Developed frontend with HTML, CSS, PHP and bootstrap..</li>
-                            <li>Constructed user database using SQL on phpMyAdmin platform.</li>
-                        </ul>
+                        </span>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Mar. 2020 – Apr. 2020</span></div>
                 </div>
+
             </div>
         </section>
         <hr class="m-0" />
@@ -195,8 +183,8 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Skills</h2>
-                <div class="subheading mb-3">Programming Languages</div>
+                <h2 class="mb-5" style="color:#dd7a39">Skills</h2>
+                <div class="subheading mb-3"><h3>Programming Languages</h3></div>
                 <div class="mb-5">
                     <div class="d-inline-block text-center">
                         <span class="d-block dev-icons"><i class="fab fa-python"></i></span>
@@ -213,7 +201,7 @@
                 </div>
 
 
-                <div class="subheading mb-3">Other</div>
+                <div class="subheading mb-3"><h3>Other</h3></div>
 
                 <div class="mb-5">
                     <div class="d-inline-block text-center">
@@ -250,6 +238,14 @@
                     </div>
                 </div>
         </section>
+    </div>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 
 </body>
 
