--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     track is on web development. </p>
                 <p class="lead mb-5">I'm seeking for a full-time or intern position of software engineer.</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/fangjiang-wu-8aa8081a3/"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/nickwfj123"><i class="fab fa-github"></i></a>
                 </div>
             </div>
@@ -70,7 +70,6 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">University of Texas at Austin</h3>
                         <div class="subheading mb-3">Master of Science in Information Studies</div>
-                        <p>GPA: 3.7/4.0</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Jan. 2019 – Dec. 2020</span></div>
                 </div>
@@ -78,7 +77,6 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Sun Yat-sen University</h3>
                         <div class="subheading mb-3">Bachelor of Engineering in Computer Science</div>
-                        <p>GPA: 3.2/4.0</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Aug. 2014 – Jun. 2018</span></div>
                 </div>
@@ -221,10 +219,6 @@
                         <span>MySQL</span>
                     </div>
                     <div class="d-inline-block ml-3 text-center">
-                        <span class="d-block dev-icons"><i class="fab fa-linux"></i></span>
-                        <span>MySQL</span>
-                    </div>
-                    <div class="d-inline-block ml-3 text-center">
                         <span class="d-block dev-icons"><i class="fas fa-server"></i></span>
                         <span>Express</span>
                     </div>
@@ -235,6 +229,14 @@
                     <div class="d-inline-block ml-3 text-center">
                         <span class="d-block dev-icons"><i class="fab fa-git"></i></span>
                         <span>Git</span>
+                    </div>
+                    <div class="d-inline-block ml-3 text-center">
+                        <span class="d-block dev-icons"><i class="fab fa-bootstrap"></i></span>
+                        <span>Bootstrap</span>
+                    </div>
+                    <div class="d-inline-block ml-3 text-center">
+                        <span class="d-block dev-icons"><i class="fab fa-linux"></i></span>
+                        <span>Linux</span>
                     </div>
                 </div>
         </section>
