--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     track is on web development. </p>
                 <p class="lead mb-5">I'm seeking for a full-time or intern position of software engineer.</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/fangjiang-wu-8aa8081a3/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/fangjiang-wu-8aa8081a3/"><i
+                            class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/nickwfj123"><i class="fab fa-github"></i></a>
                 </div>
             </div>
@@ -89,23 +90,41 @@
                 <h2 class="mb-5" style="color:#dd7a39">Projects</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">MyCampground</h3>
+                        <h3 class="mb-0 d-inline mr-2">BurgerLover</h3>  (JavaScript, MongoDB, Express, Node.js)
                         <div class="subheading mb-3">Web Application</div>
                         <ul>
-                            <li>Web application for users to share campgrounds through uploading, locating and reviewing
-                                functions.</li>
+                            <li>A wonderful burger generator for customers to customize and order their own hamburgers.
+                            </li>
+                            <li>Built web page and implemented mainly functions using React, Redux.
+                            </li>
+                            <li>Built server-side rendering Using Next.js.
+                            </li>
+                            <li>Improved the efficiency of components’ rendering by 70% using updating hooks.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Nov. 2020 – Dec. 2020</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0 d-inline mr-2">MyCamp</h3> <a
+                            href="https://glacial-plateau-40703.herokuapp.com"><i
+                                class="fas fa-external-link-alt mb-1"></i></a> (JavaScript, MongoDB, Express, Node.js)
+                        <div class="subheading mb-3">Web Application</div>
+                        <ul>
+                            <li>A warm social camp for backpackers to share campgrounds through uploading, locating and reviewing functions.</li>
                             <li>Developed frontend with HTML, CSS, JavaScript and bootstrap5.</li>
                             <li>Developed backend using Express and Node.js.</li>
                             <li>Stored users’ information in MongoDB and implemented user authentication by Passport.js.
                             </li>
                         </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Nov. 2020 – Dec. 2020
+                    <div class="flex-shrink-0"><span class="text-primary">Oct. 2020 – Nov. 2020
                         </span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Olympic Medals & Video Game Sales</h3>
+                        <h3 class="mb-0">Olympic Medals & Game Sales</h3>
                         <div class="subheading mb-3">Data Wrangling Project</div>
                         <ul>
                             <li>A data analysis report presenting relationship between Olympic medals and video game
@@ -117,19 +136,7 @@
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Apr. 2020 – May 2020</span></div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">National Parks</h3>
-                        <div class="subheading mb-3">Web Application</div>
-                        <ul>
-                            <li>Web Application for users to comment and search information of specific national park.
-                            </li>
-                            <li>Developed frontend with HTML, CSS, PHP and bootstrap..</li>
-                            <li>Constructed user database using SQL on phpMyAdmin platform.</li>
-                        </ul>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Mar. 2020 – Apr. 2020</span></div>
-                </div>
+                
             </div>
         </section>
         <hr class="m-0" />
@@ -139,14 +146,15 @@
                 <h2 class="mb-5" style="color:#dd7a39">Experiences</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">UT Division of Student Affairs</h3>
-                        <div class="subheading mb-3">Database Developer Intern</div>
+                        <h3 class="mb-0">Graduate Assistant</h3>
+                        <div class="subheading mb-3">UT Division of Student Affairs</div>
                         <ul>
                             <li>Assisted to improve the database of New Student Service system and related email
                                 notification module.</li>
-                            <li>Reconstructed database tables on MySQL Workbench and used SQL query for implementation.
+                            <li>Improved codes for email notification module using Python; Reconstructed database tables through
+                                MySQL Workbench and used SQL query for implementation.                                
                             </li>
-                            <li>Improved codes for email notification module by Python.
+                            <li>My proposal helped maintainers increase data access efficiency by 50%.
                             </li>
                         </ul>
                     </div>
@@ -158,12 +166,13 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Netease</h3>
-                        <div class="subheading mb-3">Game Operations Management Intern </div>
+                        <h3 class="mb-0">Web Developer Intern</h3>
+                        <div class="subheading mb-3">Netease Games </div>
                         <ul>
-                            <li>Involved in maintaining database for game guilds and analyzing data through players’
-                                feedback.</li>
-                            <li>Used SQL for database management and Python for data analysis.</li>
+                            <li>Assisted to build a web page for game guilds.</li>
+                            <li>Used Adobe Photoshop to process designed UI images and used HTML, CSS to build web page.</li>                                             
+                            <li>Implemented data access from MySQL database using DOM, JSON and Python.
+                            </li>                                        
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">
@@ -182,7 +191,9 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5" style="color:#dd7a39">Skills</h2>
-                <div class="subheading mb-3"><h3>Programming Languages</h3></div>
+                <div class="subheading mb-3">
+                    <h3>Programming Languages</h3>
+                </div>
                 <div class="mb-5">
                     <div class="d-inline-block text-center">
                         <span class="d-block dev-icons"><i class="fab fa-python"></i></span>
@@ -199,16 +210,14 @@
                 </div>
 
 
-                <div class="subheading mb-3"><h3>Other</h3></div>
+                <div class="subheading mb-3">
+                    <h3>Other</h3>
+                </div>
 
                 <div class="mb-5">
                     <div class="d-inline-block text-center">
-                        <span class="d-block dev-icons"><i class="fab fa-html5"></i></span>
-                        <span>HTML</span>
-                    </div>
-                    <div class="d-inline-block ml-3 text-center">
-                        <span class="d-block dev-icons"><i class="fab fa-css3-alt"></i></span>
-                        <span>CSS</span>
+                        <span class="d-block dev-icons"><i class="fab fa-react"></i></span>
+                        <span>React</span>
                     </div>
                     <div class="d-inline-block ml-3 text-center">
                         <span class="d-block dev-icons"><i class="fas fa-database"></i></span>
@@ -227,16 +236,21 @@
                         <span>Node.js</span>
                     </div>
                     <div class="d-inline-block ml-3 text-center">
+                        <span class="d-block dev-icons"><i class="fab fa-html5"></i></span>
+                        <span>HTML</span>
+                    </div>
+                    <div class="d-inline-block ml-3 text-center">
+                        <span class="d-block dev-icons"><i class="fab fa-css3-alt"></i></span>
+                        <span>CSS</span>
+                    </div>
+                
+                    <div class="d-inline-block ml-3 text-center">
                         <span class="d-block dev-icons"><i class="fab fa-git"></i></span>
                         <span>Git</span>
                     </div>
                     <div class="d-inline-block ml-3 text-center">
                         <span class="d-block dev-icons"><i class="fab fa-bootstrap"></i></span>
                         <span>Bootstrap</span>
-                    </div>
-                    <div class="d-inline-block ml-3 text-center">
-                        <span class="d-block dev-icons"><i class="fab fa-linux"></i></span>
-                        <span>Linux</span>
                     </div>
                 </div>
         </section>
